Build JADE with Docker and Maven-OpenJDK