@@ -3,18 +3,17 @@
   <groupId>com.tilab.jade</groupId>
   <artifactId>jade</artifactId>
   <version>4.6.0-6874</version>
-  <name>p21-jade-fipa-4.6.0</name>
-  <description>JADE Multi-Agent Compiled with Java JDK-11, 17, etc.</description>
+  <name>TILAB-JADE-Platform-FIPA-4.6.0</name>
+  <description>JADE Multi-Agent platform compiled with Java JDK-11 or 17</description>
 
 
-	<properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	</properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
 
+  <build>
 
-	 <build>
-  
      <resources>
        <resource>
           <directory>src/main/java</directory>
@@ -24,19 +23,18 @@
         </resource>
      </resources>
 
-	   <plugins>
-	     <plugin>
-	       <groupId>org.apache.maven.plugins</groupId>
-	       <artifactId>maven-jar-plugin</artifactId>
-         <version>3.2.2</version>
-	       <configuration>
-	         <archive>
-	           <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-	         </archive>
+     <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.2</version>
+            <configuration>
+               <archive>
+                  <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+               </archive>
+            </configuration>
+        </plugin>
 
-	       </configuration>
-
-	     </plugin>
 
          <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
@@ -45,24 +43,22 @@
                   <source>1.8</source>
                   <target>17</target>
 
-
                   <compilerArgs>
                     <arg>--add-exports</arg>
                     <arg>java.desktop/com.sun.java.swing.plaf.motif.resources=ALL-UNNAMED</arg>
                     <arg>--add-exports</arg>
                     <arg>java.desktop/com.sun.java.swing.plaf.windows.resources=ALL-UNNAMED</arg>
+                    <arg>--add-opens</arg>
+                    <arg>java.xml/jdk.xml.internal=ALL-UNNAMED</arg>
                   </compilerArgs>
-
-                  
-
-                  
                 </configuration>
           </plugin>
+          
 
-
-
-         </plugins>
-       </build>
+     </plugins>
+     
+     
+  </build>
 
 
 
